search form in content admin

--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -66,9 +66,9 @@
                     <a href="#trashed" data-toggle="tab"><i class="fa fa-trash-o"></i> Corbeille</a>
                 </li>
             </ul>
-            <div class="nav nav-tabs col-md-6 pull-right">
-                <form method="get">
-                    <input type="search" placeholder="Rechercher..." />
+            <div class="nav nav-tabs col-md-6">
+                <form method="get" class="col-md-6">
+                    <input type="search" class="form-control pull-right" placeholder="Rechercher..." />
                 </form>
             </div>
             <div class="tab-content">
