search form in content admin

--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -67,9 +67,11 @@
                 </li>
             </ul>
             <div class="nav nav-tabs col-md-6">
-                <form method="get" class="col-md-6">
-                    <input type="search" class="form-control pull-right" placeholder="Rechercher..." />
-                </form>
+                <div class="row">
+                    <form method="get" class="col-md-6 pull-right">
+                        <input type="search" class="form-control" placeholder="Rechercher..." style="margin-bottom: 1px;" />
+                    </form>
+                </div>
             </div>
             <div class="tab-content">
                 <div id="published" class="tab-pane active">
