search form in content admin

--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -68,8 +68,8 @@
             </ul>
             <div class="nav nav-tabs col-md-6">
                 <div class="row">
-                    <form method="get" class="col-md-6 pull-right" style="padding-right: 0">
-                        <input type="search" class="form-control" placeholder="Rechercher..." style="margin-bottom: 1px;" />
+                    <form method="get" class="col-md-6 pull-right search-content">
+                        <input type="search" class="form-control" placeholder="Rechercher..." />
                     </form>
                 </div>
             </div>
