--- a/src/CMS/Bundle/CoreBundle/Resources/public/css/light-bootstrap-dashboard.css
+++ b/src/CMS/Bundle/CoreBundle/Resources/public/css/light-bootstrap-dashboard.css
@@ -9903,3 +9903,8 @@ body *, body *:before, body *:after, html *, html *:before, html *:after {
 .player.playing .play-button .mdi-play {
     opacity: 0;
 }
+
+.search-content {
+    padding-right: 0;
+    margin-bottom: 1px;
+}
