search form in content admin

--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -69,7 +69,7 @@
             <div class="nav nav-tabs col-md-6">
                 <div class="row">
                     <form method="get" class="col-md-6 pull-right search-content">
-                        <input type="search" class="form-control" placeholder="Rechercher..." />
+                        <input type="search" class="form-control" name="q" placeholder="Rechercher..." />
                     </form>
                 </div>
             </div>
