search form in content admin

--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -78,7 +78,7 @@
                     {% include "ContentBundle:Content:table.html.twig" with {'entities': entities} %}
                 </div>
                 <div id="trashed" class="tab-pane">
-                    {% include "ContentBundle:Content:table.html.twig" with {'entities': entities_trashed} %}
+                    {# include "ContentBundle:Content:table.html.twig" with {'entities': entities_trashed} #}
                 </div>
             </div>
         </div>
