fix problem referer route content controller

--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/table.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/table.html.twig
@@ -16,7 +16,7 @@
             {% endfor %}
         </th>
         <th>{{ 'cms.content.author'|trans }}</th>
-        <th{% if entities.isSorted('c.published') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'cms.content.status'|trans, 'c.published') }}</th>
+        <th{% if entities.isSorted('c.published') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'cms.content.status.status'|trans, 'c.published') }}</th>
         <th>{{ 'cms.content.date'|trans }}</th>
         <th class="no-sort text-right">{{ 'cms.content.actions'|trans }}</th>
     </tr>
