--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -9913,3 +9913,8 @@ body *, body *:before, body *:after, html *, html *:before, html *:after {
 .player.playing .play-button .mdi-play {
     opacity: 0;
 }
+
+.search-content {
+    padding-right: 0;
+    margin-bottom: 1px;
+}
