--- a/web/css/admin_light-bootstrap-dashboard_3.css
+++ b/web/css/admin_light-bootstrap-dashboard_3.css
@@ -9903,3 +9903,8 @@ body *, body *:before, body *:after, html *, html *:before, html *:after {
 .player.playing .play-button .mdi-play {
     opacity: 0;
 }
+
+.search-content {
+    padding-right: 0;
+    margin-bottom: 1px;
+}
