--- a/src/CMS/Bundle/ContentBundle/Resources/views/Twig/metas.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Twig/metas.html.twig
@@ -1,3 +1,5 @@
 {% for metavalue in metavalues %}
-    {{ metavalue.meta.value|format(metavalue.value)|raw }}
+    {% if metavalue.value != '' %}
+        {{ metavalue.meta.value|format(metavalue.value)|raw }}
+    {% endif %}
 {% endfor %}
