--- a/src/CMS/Bundle/ContentBundle/Resources/views/Category/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Category/index.html.twig
@@ -24,30 +24,33 @@
             <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table">
                 <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Published</th>
-                    <th class="no-sort">Actions</th>
+                    <th>{{ 'cms.content.id'|trans }}</th>
+                    <th>{{ 'cms.content.title'|trans }}</th>
+                    <th>{{ 'cms.category.description'|trans }}</th>
+                    <th>{{ 'cms.content.status.status'|trans }}</th>
+                    <th>{{ 'cms.content.actions'|trans }}</th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for entity in entities %}
                     <tr>
                         <td>{{ entity.id }}</td>
-                        <td>{{ entity }}</td>
+                        <td>{{ entity.toStringLevel() }}</td>
                         <td>{{ entity.description|raw }}</td>
                         <td>
-                            <div class="switch"><input type="checkbox"
-                                                       {% if entity.published %}checked="checked"{% endif %}
-                                                       class="status" data-id="{{ entity.id }}"
-                                                       data-repo="ContentBundle:Category" data-prop="published"
-                                                       onchange="changeProp(this)"></div>
+                            <div class="switch" data-on-label="" data-off-label="">
+                                <input type="checkbox" {% if entity.published %}checked="checked"{% endif %}
+                                       class="status" data-id="{{ entity.id }}" data-repo="ContentBundle:Category"
+                                       data-prop="published"
+                                       onchange="changeProp(this)">
+                            </div>
                         </td>
                         <td>
-                            <a href="{{ path('admin_category_edit', { 'id': entity.id }) }}"><i
+                            <a href="{{ path('admin_category_edit', { 'id': entity.id }) }}"
+                               class="btn btn-simple btn-info btn-xs"><i
                                         class="fa fa-pencil"></i></a>
-                            <a data-toggle="modal" href='#modal-delete' class="" data-toggle="tooltip"
+                            <a data-toggle="modal" href='#modal-delete' class="btn btn-simple btn-danger btn-xs"
+                               data-toggle="tooltip"
                                data-placement="top" data-original-title="Supprimer" data-id="{{ entity.id }}"><i
                                         class="fa fa-trash-o"></i></a>
                         </td>
