--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -1,6 +1,12 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
+    {% set queryParams = app.request.query.all %}
+    {% if queryParams.q is defined %}
+        {% set search_word = queryParams.q %}
+    {% else %}
+        {% set search_word = '' %}
+    {% endif %}
     <div class="section-header">
         <ol class="breadcrumb">
             <li><a href="{{ path('admin_content') }}">Contenus</a></li>
@@ -69,7 +75,8 @@
             <div class="nav nav-tabs col-md-6">
                 <div class="row">
                     <form method="get" class="col-md-6 pull-right search-content">
-                        <input type="search" class="form-control" name="q" placeholder="Rechercher..." />
+
+                        <input type="search" class="form-control" name="q" placeholder="Rechercher..." value="{{ search_word }}" />
                     </form>
                 </div>
             </div>
