--- a/src/CMS/Bundle/CoreBundle/Resources/public/css/light-bootstrap-dashboard.css
+++ b/src/CMS/Bundle/CoreBundle/Resources/public/css/light-bootstrap-dashboard.css
@@ -9908,3 +9908,11 @@ body *, body *:before, body *:after, html *, html *:before, html *:after {
     padding-right: 0;
     margin-bottom: 1px;
 }
+
+.highlight {
+    background-color: #ffeb3b;
+}
+
+.table tbody td p {
+    font-size: 14px;
+}
