--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -9918,3 +9918,7 @@ body *, body *:before, body *:after, html *, html *:before, html *:after {
     padding-right: 0;
     margin-bottom: 1px;
 }
+
+.highlight {
+    background-color: #ffeb3b;
+}
