--- a/src/CMS/Bundle/CoreBundle/Resources/views/Widget/share.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Widget/share.html.twig
@@ -1,8 +1,8 @@
 {# "Twitter", "Facebook", "Pinterest", "Google Plus" #}
-<a href="https://twitter.com/share?text={{ content.get('twitter description').value|url_encode }}&via={{ content.get('twitter creator').value|url_encode }}&url={{ url('front_single', {'alias': content.url})|url_encode }}" target="_blank" rel="noopener">
+<a href="https://twitter.com/share?url={{ bitlyUrl }}&text={{ content.get('twitter description').value|url_encode }}&via={{ content.get('twitter creator').value|url_encode }}" target="_blank" rel="noopener">
     <i class="fa fa-twitter"></i>
 </a>
-<a href="https://www.facebook.com/sharer/sharer.php?u={{ url('front_single', {'alias': content.url})|url_encode }}" target="_blank" rel="noopener">
+<a href="https://www.facebook.com/sharer/sharer.php?u={{ bitlyUrl }}" target="_blank" rel="noopener">
     <i class="fa fa-facebook"></i>
 </a>
 <a href="https://pinterest.com/pin/create/button/?{% if content.thumbnail != null %}url={{ content.thumbnail.getWebPath()|imagine_filter('thumb_post')|url_encode }}&{% endif %}{% if content.thumbnail != null %}media={{ content.thumbnail.metas['alt_1']|url_encode }}&{% endif %}description={{ content.chapo|url_encode }}" target="_blank" rel="noopener">
