--- a/templates/Breezy/header.html.twig
+++ b/templates/Breezy/header.html.twig
@@ -43,7 +43,7 @@
         <div id="main-header-logo">
             <div id="main-wrapper-logo">
                 <div class="container">
-                    <h1><a href="{{ path('home') }}">Travel Cloud</a></h1>
+                    <h1><a href="{{ path('home', {'_format': 'html'}) }}">Travel Cloud</a></h1>
                     <img src="{{ asset('/templates/Breezy/assets/images/logo4.png') }}" width="160px" />
                 </div>
             </div>
