--- a/web/templates/Breezy/header.html.twig
+++ b/web/templates/Breezy/header.html.twig
@@ -15,7 +15,6 @@
             {% endfor %}
         {% endif %}
     {% endif %}
-    <meta name="theme-color" content="#1C193C">
     <link rel="manifest" href="/templates/Breezy/assets/manifest.json">
 
     {% stylesheets
@@ -44,7 +43,7 @@
         <div id="main-header-logo">
             <div id="main-wrapper-logo">
                 <div class="container">
-                    <h1><a href="{{ path('home') }}">Travel Cloud</a></h1>
+                    <h1><a href="{{ path('home', {'_format': 'html'}) }}">Travel Cloud</a></h1>
                     <img src="{{ asset('/templates/Breezy/assets/images/logo4.png') }}" width="160px" />
                 </div>
             </div>
