--- a/web/templates/Breezy/single.amp.html.twig
+++ b/web/templates/Breezy/single.amp.html.twig
@@ -1,8 +1,36 @@
 {% include "@cms/Breezy/header.amp.html.twig" %}
-<h1>{{ content.title }}</h1>
-{% if content.thumbnail is not null %}
-    <amp-img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}"
-         alt="{{ content.thumbnail.metas['alt_1'] }}"
-             title="{{ content.thumbnail.metas['title_1'] }}" width="800" height="550"></amp-img>
-{% endif %}
+<article id="post-{{ content.id }}" class="article-item post post-{{ content.id }}">
+    <div class="post-featured-item">
+        {% if content.thumbnail is not null %}
+            <amp-img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}"
+                 alt="{{ content.thumbnail.metas['alt_1'] }}"
+                 title="{{ content.thumbnail.metas['title_1'] }}" width="600" height="429" layout="responsive" class="img-responsive"/>
+        {% endif %}
+    </div>
+    <div class="post-entry full">
+        <div class="post-header">
+            <span class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span>
+            <h1>{{ content.title }}</h1>
+        </div>
+        <div class="post-entry-text">
+            {{ content.description|contact_form|raw }}
+            <div class="date-author">
+                <div class="pull-left">
+                    Ecrit par <span class="author">{{ content.author }}</span> le <span
+                            class="date">{{ content.created|localizeddate('full', 'none') }}</span>
+                </div>
+                <div class="pull-right">
+                    <amp-social-share type="facebook"></amp-social-share>
+                    <amp-social-share type="twitter"></amp-social-share>
+                    <amp-social-share type="pinterest"></amp-social-share>
+                </div>
+            </div>
+        </div>
+    </div>
+</article>
+        <div class="pull-right">
+
+        </div>
+    </div>
+</div>
 {% include "@cms/Breezy/footer.amp.html.twig" %}
