--- a/templates/Breezy/single-recette.html.twig
+++ b/templates/Breezy/single-recette.html.twig
@@ -16,10 +16,10 @@
             </div>
             <div class="post-entry full" >
                 <div class="post-header">
-                    <span class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span>
+                    <span itemprop="articleSection" class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span>
                     <h1 itemprop="name">{{ content.title }}</h1>
                 </div>
-                <div class="post-entry-text">
+                <div class="post-entry-text" itemprop="articleBody">
                     {{ content.description|raw }}
                     <div class="col-1-of-3">
                         <h3>Ingrédients</h3>
@@ -38,8 +38,8 @@
                     </div>
                     <div class="date-author">
                         <div class="pull-left">
-                            Ecrit par <span class="author" itemprop="author">{{ content.author }}</span> le <span
-                                    class="date">{{ content.created|localizeddate('full', 'none') }}</span>
+                            Ecrit par <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="author" itemprop="author">{{ content.author }}</span> le <span
+                                    class="date" itemprop="datePublished" content="{{ content.created|date('Y-m-d H:i:s') }}">{{ content.created|localizeddate('full', 'none') }} à {{ content.created|date('H:i') }}</span>
                         </div>
                         <div class="pull-right">
                             {{ widget('share', content) }}
