--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -33,7 +33,8 @@
 <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}" defer></script>
 {% javascripts
 '@breezy_js'
-output="assetic/breezy_js.js" %}
+    output="js/breezy.js"
+ %}
 <script type="text/javascript" src="{{ asset_url }}"></script>
 {% endjavascripts %}
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
