--- a/templates/Breezy/header.html.twig
+++ b/templates/Breezy/header.html.twig
@@ -22,7 +22,7 @@
 
     {% stylesheets
         '@breezy'
-        filter="uglifycss" filter="cssrewrite" output="/assetic/breezy.css" %}
+        filter="uglifycss" filter="cssrewrite" output="css/breezy.css" %}
     <link rel="stylesheet" type="text/css" href="{{ asset_url }}">
     {% endstylesheets %}
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lato" rel="stylesheet" media="screen">
