--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -9922,3 +9922,7 @@ body *, body *:before, body *:after, html *, html *:before, html *:after {
 .highlight {
     background-color: #ffeb3b;
 }
+
+.table tbody td p {
+    font-size: 14px;
+}
