--- a/web/templates/Breezy/comment.html.twig
+++ b/web/templates/Breezy/comment.html.twig
@@ -7,7 +7,13 @@
         <span class="date">Le {{ comment.dateAdded|gmdate('d/m/Y à H:i') }}</span>
         <p>{{ comment.message }}</p>
         <div class="pull-right likes">
-            <a href="javascript:addLike({{ comment.id }})" id="link-comment-{{ comment.id }}"><i class="fa fa-heart"></i> <span class="like" id="like-{{ comment.id }}">{{ comment.likes }}</span></a>
+            <a href="javascript:addLike({{ comment.id }})" id="link-comment-{{ comment.id }}"><i class="fa fa-heart"></i>&nbsp;
+                {% if comment.likes > 0 %}
+                <span class="like" id="like-{{ comment.id }}">
+                    {{ comment.likes }}
+                </span>
+                {% endif %}
+            </a>
         </div>
     </div>
     <div class="clearfix"></div>
