--- a/web/templates/Breezy/header.html.twig
+++ b/web/templates/Breezy/header.html.twig
@@ -6,25 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% if content is defined %}
         {{ metas(content) }}
+        <link rel="alternate" href="{{ url('front_single', {'alias': content.url, '_format': 'html'}) }}" hreflang="fr-fr" />
     {% elseif category is defined %}
         {{ metas(category) }}
+        <link rel="alternate" href="{{ url('front_single', {'alias': category.url, '_format': 'html'}) }}" hreflang="fr-fr" />
     {% else %}
         {% if metas is defined %}
             {% for meta in metas %}
                 {{ meta|raw }}
             {% endfor %}
         {% endif %}
+        <link rel="alternate" href="{{ url('home', {'_format': 'html'}) }}" hreflang="fr-fr" />
     {% endif %}
     <link rel="manifest" href="/templates/Breezy/assets/manifest.json">
 
     {% stylesheets
         '@breezy'
-        filter="uglifycss" filter="cssrewrite" output="/assetic/breezy.css" %}
+        filter="uglifycss" filter="cssrewrite" output="css/breezy.css" %}
     <link rel="stylesheet" type="text/css" href="{{ asset_url }}">
     {% endstylesheets %}
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lato" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-84835424-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
     <script>
         var styleArray = [{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":21}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}];
     </script>
