--- a/web/templates/Breezy/style.css
+++ b/web/templates/Breezy/style.css
@@ -786,13 +786,37 @@ body.search-open .search-form-area {
     padding: 0;
 }
 
-.grid-layout .post-item {
-    float: left;
-    display: inline-block;
-    vertical-align: top;
-    width: 33.3333333333333333%;
-    padding: 0 24px 40px 20px;
-    line-height: 1.2em;
+@media (min-width: 1200px) {
+    .grid-layout .post-item {
+        float: left;
+        display: inline-block;
+        vertical-align: top;
+        width: 33.3333333333333333%;
+        padding: 0 24px 40px 20px;
+        line-height: 1.2em;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+    .grid-layout .post-item {
+        float: left;
+        display: inline-block;
+        vertical-align: top;
+        width: 50%;
+        padding: 0 24px 40px 20px;
+        line-height: 1.2em;
+    }
+}
+
+@media (max-width: 991px) {
+    .grid-layout .post-item {
+        float: left;
+        display: inline-block;
+        vertical-align: top;
+        width: 100%;
+        padding: 0 24px 40px 20px;
+        line-height: 1.2em;
+    }
 }
 
 .grid-layout .post-item {
@@ -807,11 +831,6 @@ body.search-open .search-form-area {
     -webkit-box-shadow: 0px 1px 5px rgba(0,0,0,0.05);
 }
 
-@media only screen and (max-width: 1023px) {
-    .grid-layout .post-item {
-        width: 50%!important;
-    }
-}
 
 @media only screen and (max-width: 767px) {
     .grid-layout .post-item {
@@ -973,17 +992,22 @@ body.search-open .search-form-area {
 /*********************
  * Post
  *********************/
-#content {
-    width: 800px;
-    float: left;
-}
 
-@media only screen and (max-width: 1023px) {
-    #content {
+
+@media (min-width: 992px) and (max-width: 1200px) {
+    #content, #sidebar {
         width: 100%;
         float: none !important;
     }
 }
+
+@media (min-width: 1200px) {
+    #content {
+        width: 800px;
+        float: left;
+    }
+}
+
 
 .single .post.article-item {
     border-bottom: none;
@@ -1191,9 +1215,11 @@ body.search-open .search-form-area {
 /*********************
  * Sidebar
  *********************/
-#sidebar {
-    float: right;
-    width: 350px;
+@media (min-width: 1200px) {
+    #sidebar {
+        float: right;
+        width: 350px;
+    }
 }
 
 .widget, .comments {
