--- a/templates/Breezy/header.html.twig
+++ b/templates/Breezy/header.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="/templates/Breezy/assets/favicon.ico" type="image/x-icon" />
     {% if content is defined %}
         {{ metas(content) }}
         <link rel="alternate" href="{{ url('front_single', {'alias': content.url, '_format': 'html'}) }}" hreflang="fr-fr" />
