--- a/templates/Breezy/header.html.twig
+++ b/templates/Breezy/header.html.twig
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="/templates/Breezy/assets/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/templates/Breezy/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/templates/Breezy/assets/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/templates/Breezy/assets/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/templates/Breezy/assets/manifest.json">
+    <link rel="mask-icon" href="/templates/Breezy/assets/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/templates/Breezy/assets/favicon.ico">
+    <meta name="msapplication-config" content="/templates/Breezy/assets/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     {% if content is defined %}
         {{ metas(content) }}
         <link rel="alternate" href="{{ url('front_single', {'alias': content.url, '_format': 'html'}) }}" hreflang="fr-fr" />
@@ -27,7 +34,6 @@
     <link rel="stylesheet" type="text/css" href="{{ asset_url }}">
     {% endstylesheets %}
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lato" rel="stylesheet" media="screen">
-    <link rel="stylesheet" href="//cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
