--- a/templates/Breezy/header.html.twig
+++ b/templates/Breezy/header.html.twig
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="/templates/Breezy/assets/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="/templates/Breezy/assets/manifest.json">
     <link rel="mask-icon" href="/templates/Breezy/assets/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/templates/Breezy/assets/favicon.ico">
+    <link rel="shortcut icon" href="/templates/Breezy/assets/favicon.ico?v2">
     <meta name="msapplication-config" content="/templates/Breezy/assets/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     {% if content is defined %}
