date.now replaced by performance.now

--- a/templates/Breezy/header.html.twig
+++ b/templates/Breezy/header.html.twig
@@ -33,7 +33,6 @@
     <link rel="stylesheet" type="text/css" href="{{ asset_url }}">
     {% endstylesheets %}
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lato" rel="stylesheet" media="screen">
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -63,7 +62,7 @@
             <div id="main-wrapper-logo">
                 <div class="container">
                     <h1><a href="{{ path('home', {'_format': 'html'}) }}">Travel Cloud</a></h1>
-                    <img src="{{ asset('/templates/Breezy/assets/images/logo4.png') }}" width="160px" />
+                    <img src="{{ asset('/templates/Breezy/assets/images/logo4.png') }}" width="160px" alt="bus volkswagen" />
                 </div>
             </div>
         </div>
