--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -28,8 +28,7 @@
         <p>Choupe et Doune</p>
     </div>
 </div>
-
-<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}" defer></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}" defer></script>
 {% javascripts
 '@breezy_js'
