--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -25,7 +25,7 @@
             <div class="heart-piece-7"></div>
             <div class="heart-piece-8"></div>
         </div>
-        <p>Choupe et Doune</p>
+        <p>Choup et Doune</p>
     </div>
 </div>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -38,16 +38,24 @@
 {% endjavascripts %}
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
 <script type="text/javascript">
-    if ('serviceWorker' in navigator) {
-        console.log('CLIENT: service worker registration in progress.');
-        navigator.serviceWorker.register('{{ absolute_url('/templates/Breezy/assets/js/service-worker.js') }}').then(function() {
-            console.log('CLIENT: service worker registration complete.');
-        }, function() {
-            console.log('CLIENT: service worker registration failure.');
+    if('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/templates/Breezy/assets/js/service-worker.js', { scope: '/' })
+            .then(function(registration) {
+                console.log('Service Worker Registered');
+            });
+        navigator.serviceWorker.ready.then(function(registration) {
+            console.log('Service Worker Ready');
         });
-    } else {
-        console.log('CLIENT: service worker is not supported.');
     }
+
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-84835424-1', 'auto');
+    ga('send', 'pageview');
+
 </script>
 </body>
 </html>
