--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -38,14 +38,15 @@
 {% endjavascripts %}
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
 <script type="text/javascript">
-    if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/templates/Breezy/assets/js/service-worker.js', { scope: '/' })
-            .then(function(registration) {
-                console.log('Service Worker Registered');
-            });
-        navigator.serviceWorker.ready.then(function(registration) {
-            console.log('Service Worker Ready');
+    if ('serviceWorker' in navigator) {
+        console.log('CLIENT: service worker registration in progress.');
+        navigator.serviceWorker.register('{{ absolute_url('/templates/Breezy/assets/js/service-worker.js') }}').then(function() {
+            console.log('CLIENT: service worker registration complete.');
+        }, function() {
+            console.log('CLIENT: service worker registration failure.');
         });
+    } else {
+        console.log('CLIENT: service worker is not supported.');
     }
 
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
