--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -29,7 +29,7 @@
     </div>
 </div>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-
+<script type="text/javascript" src="/bundles/{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 {% javascripts
 '@breezy_js'
     output="js/breezy.js"
