--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -29,14 +29,15 @@
     </div>
 </div>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="/bundles/{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/bundles/fosjsrouting/js/router.js') }}"></script>
+<script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}" defer></script>
 {% javascripts
 '@breezy_js'
     output="js/breezy.js"
  %}
 <script type="text/javascript" src="{{ asset_url }}"></script>
 {% endjavascripts %}
-<script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}" defer></script>
+
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
 <script type="text/javascript">
     if ('serviceWorker' in navigator) {
