--- a/templates/Breezy/header.html.twig
+++ b/templates/Breezy/header.html.twig
@@ -52,8 +52,8 @@
         <div id="main-header-logo">
             <div id="main-wrapper-logo">
                 <div class="container">
-                    <h1><a href="{{ path('home', {'_format': 'html'}) }}">Travel Cloud</a></h1>
-                    <img src="{{ asset('/templates/Breezy/assets/images/logo4.png') }}" width="160px" alt="bus volkswagen" />
+                    <h1><a href="{{ path('home', {'_format': 'html'}) }}">Choup et Doune</a></h1>
+                    <a href="{{ path('home', {'_format': 'html'}) }}"><img src="{{ asset('/templates/Breezy/assets/images/logo4.png') }}" width="160px" alt="bus volkswagen" /></a>
                 </div>
             </div>
         </div>
