--- a/templates/Breezy/single-recette.html.twig
+++ b/templates/Breezy/single-recette.html.twig
@@ -22,8 +22,8 @@
                     <span itemprop="articleSection" class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span>
                     <h1 itemprop="name">{{ content.title }}</h1>
                 </div>
-                <div class="post-entry-text" itemprop="articleBody">
-                    {{ content.description|raw }}
+                <div class="post-entry-text">
+                    <div itemprop="description">{{ content.description|raw }}</div>
                     <div class="col-1-of-3">
                         <h3>Ingrédients</h3>
                         <div itemprop="recipeIngredient">
@@ -37,11 +37,11 @@
                             <li>Temps de préparation : <time datetime="PT{{ content.get('temps-preparation')|raw }}M" itemprop="prepTime">{{ content.get('temps-preparation')|raw }} minutes</time></li>
                             <li>Temps de cuisson : <time datetime="PT{{ content.get('temps-cuisson')|raw }}M" itemprop="cookTime">{{ content.get('temps-cuisson')|raw }} minutes</time></li>
                         </ul>
-                        {{ content.get("preparation")|raw }}
+                        <div itemprop="recipeInstructions">{{ content.get("preparation")|raw }}</div>
                     </div>
                     <div class="date-author">
                         <div class="pull-left">
-                            Ecrit par <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="author" itemprop="author">{{ content.author }}</span> le <span
+                            Ecrit par <span itemprop="author"><{{ content.author }}</span> le <span
                                     class="date" itemprop="datePublished" content="{{ content.created|date('Y-m-d H:i:s') }}">{{ content.created|localizeddate('full', 'none') }} à {{ content.created|date('H:i') }}</span>
                         </div>
                         <div class="pull-right">
