type spectacles fix

--- a/templates/Breezy/single-recette.html.twig
+++ b/templates/Breezy/single-recette.html.twig
@@ -19,7 +19,7 @@
             </div>
             <div class="post-entry full" >
                 <div class="post-header">
-                    <span itemprop="articleSection" class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span>
+                    <span class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span>
                     <h1 itemprop="name">{{ content.title }}</h1>
                 </div>
                 <div class="post-entry-text">
