--- a/app/Resources/views/admin/base_login.html.twig
+++ b/app/Resources/views/admin/base_login.html.twig
@@ -8,7 +8,7 @@
         'bundles/core/css/font-awesome.min.css'
         'bundles/core/css/bootstrap.min.css'
         'bundles/core/css/light-bootstrap-dashboard.css'
-        filter='cssrewrite' output='css/admin.css' %}
+        filter='cssrewrite' output='css/login.css' %}
         <link rel="stylesheet" type="text/css" href="{{ asset_url }}">
     {% endstylesheets %}
 </head>
