--- a/templates/Breezy/style.css
+++ b/templates/Breezy/style.css
@@ -10,7 +10,6 @@
  * Tags: responsive-layout, fluid-layout, translation-ready, microformats, masonry, lazy-load
  */
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300);
-@import url(https://cdn.materialdesignicons.com/1.3.41/css/materialdesignicons.min.css);
 
 body *, body *:before, body *:after, html *, html *:before, html *:after {
     transition: all 0.5s ease;
@@ -96,7 +95,7 @@ body *, body *:before, body *:after, html *, html *:before, html *:after {
 .player .play-button i {
     z-index: 100;
 }
-.player .play-button .mdi-pause {
+.player .play-button .fa-pause {
     z-index: 100;
     position: absolute;
     right: 11px;
@@ -182,7 +181,7 @@ body *, body *:before, body *:after, html *, html *:before, html *:after {
 .player.playing .play-button {
     background: transparent;
 }
-.player.playing .play-button .mdi-play {
+.player.playing .play-button .fa-play {
     opacity: 0;
 }
 
