--- a/templates/Breezy/home.html.twig
+++ b/templates/Breezy/home.html.twig
@@ -60,7 +60,7 @@
                                             </div>
                                             <p>{{ content.chapo }}</p>
                                             <div class="masonry-item-footer clearfix">
-                                                <div class="pull-right">{{ social_buttons(content) }}</div>
+                                                <div class="pull-right">{{ social_buttons(content.url) }}</div>
                                             </div>
                                             <div class="masonry-item-footer clearfix">
                                                 <div class="sub-meta-container">
