--- a/src/CMS/Bundle/FrontBundle/Resources/views/Sitemap/sitemap.xml.twig
+++ b/src/CMS/Bundle/FrontBundle/Resources/views/Sitemap/sitemap.xml.twig
@@ -3,7 +3,7 @@
         xmlns:image="http://www.google.com/schemas/sitemap-image/1.1">
     <url>
         <loc>{{ url('home', {'_format': 'html'}) }}</loc>
-        {% set last_content = contents|last %}
+        {% set last_content = contents|first %}
         <lastmod>{{ last_content.created|date('Y-m-d') }}</lastmod>
         <changefreq>daily</changefreq>
         <priority>1.0</priority>
