fix update content categories

--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
@@ -23,7 +23,7 @@
             </li>
         </ul>
     </div>
-
+    {{ form_errors(edit_form) }}
     {{ form_start(edit_form) }}
     <div class="tab-content">
         <div id="seo" class="tab-pane">
