--- a/templates/Breezy/single-spectacles.html.twig
+++ b/templates/Breezy/single-spectacles.html.twig
@@ -28,7 +28,7 @@
         <div class="widget widget_infos">
             <h4 class="widget-title">Infos</h4>
             <p>Date : {{ content.get('date-du-concert')|raw }}</p>
-            <p>Tarif : {{ content.get('tarif')|raw }}</p>
+            <p>Tarif : {{ content.get('tarif')|raw }}&euro;</p>
         </div>
 
         <div class="widget widget_map">
